--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "typescript": "5.8.3",
     "typescript-eslint": "8.32.1",
     "vite": "6.3.5",
+    "vite-plugin-pwa": "^1.0.0",
     "vite-plugin-vercel": "9.0.5"
   },
   "lint-staged": {
