--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,8 @@
     "paths": {
       "@/*": ["./src/*"],
       "@assets/*": ["./src/assets/*"],
+      "@components/*": ["./src/components/*"],
+      "@hooks/*": ["./src/hooks/*"],
     }
   },
   "include": [
