--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     }
   },
   "include": [
-    "**/*.ts", "**/*.tsx", "./src/**/*"
+    "**/*.tsx", "./src/**/*"
   ],
   "exclude": ["node_modules", "dist"]
 }
