--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,21 +5,19 @@
     { "path": "./tsconfig.node.json"}
   ],
   "compilerOptions": {
-    "declaration": true,
-    "emitDeclarationOnly": true,
-    "outDir": "./dist/types",
+    "target": "ESNext",
+    "module": "ESNext",
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "jsx": "react-jsx",
+    "strict": true,
+    "moduleResolution": "node",
+    "esModuleInterop": true,
     "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["./src/*"],
-      "@assets/*": ["./src/assets/*"],
-      "@components/*": ["./src/components/*"],
-      "@hooks/*": ["./src/hooks/*"],
-    }
+    "noEmit": true,
+    "incremental": true
   },
-  "include": [
-    "./src/**/*"
-  ],
+  "include": ["src"],
   "exclude": ["node_modules", "dist"]
 }
